--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,26 +1,33 @@
-corner-radius = 6
+corner-radius = 7
 active-opacity = 0.90
 frame-opacity = 1.0
 focus-exclude = [ "class_g = 'Cairo-clock'" ]
-fading = true
-fade-in-step = 0.07
-fade-out-step = 0.07
+/* fading = true */
+/* fade-in-step = 0.10 */
+/* fade-out-step = 0.10 */
 opacity-rule = [
-  /* "100: name *= 'Alacritty'", */
-  "100: class_g *?='virt-manager'",
-  "100: class_g *?='feh'",
-  "100: class_g *?='mpv'",
-  "100: class_g *='Ferdi'",
-  "80: name *= 'Terminal'",
-  "100:name *= 'Firefox'",
-  "100: class_i *?= 'cvavr.exe'",
+  "80:  name *?= 'alttab'",
+  "95:  name *?= 'Spotify' && focused",
+  "100: name *?= 'VLC'",
+  /* "88:  class_g *?= 'alacritty' && !focused", */
+  /* "97: class_g *?= 'alacritty' && focused", */
+  "100: class_g *?= 'libreoffice'",
+  "100: class_g *?= 'google-chrome-beta'",
+  "100: class_g *?= 'virt-manager'",
+  "100: class_g *?= 'transmission-gtk'",
+  "100: class_g *?= 'feh'",
+  "100: class_g *?= 'mpv'",
+  "100: class_g *?= 'Ferdi'",
+  "100: class_g *?= 'gimp-2.10'",
   "100: class_g *?= 'Brave'",
+  "100: class_g *?= 'Firefox'",
+  "100: class_i *?= 'Navigator'",
+  "100: class_i *?= 'chromium'",
+  "100: class_i *?= 'cvavr.exe'",
   "100: class_i *?= 'evince'",
-  "100:class_i *?= 'octave-gui'",
-  "100:class_i *= 'zathura'",
-  "100:name *= 'VLC'",
-  "0:name *= 'Glava'",
-  "92:name *= 'Spotify'",
+  "100: class_i *?= 'octave-gui'",
+  "100: class_i *?= 'zathura'",
+  "100: class_i *?= 'nemo'",
 ]
 blur-method = "dual_kawase"
 blur-strength = 4
@@ -31,7 +38,6 @@ blur-background-exclude = [
   "QTILE_INTERNAL@:c",
   "class_i *?= 'octave-gui'",
   "name *?= 'Glava'",
-  /* "name *?= 'Spotify'", */
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c"
 ]
@@ -40,6 +46,18 @@ shadow = false
 shadow-exclude = [
   "QTILE_INTERNAL@:c"
 ]
+
+wintypes =
+{
+ dock = { shadow = false; };
+ dnd = { shadow = false; };
+ tooltip = { shadow = false; };
+ menu        = { opacity = false; };
+ dropdown_menu = { opacity = false; };
+ popup_menu    = { opacity = false; };
+ utility       = { opacity = false; };
+}
+
 backend = "glx"
 vsync = true
 mark-wmwin-focused = true
